--- a/eam/view/view-eam/src/main/resources/public/business/eam/asset_attribute_item/asset_attribute_item_list.html
+++ b/eam/view/view-eam/src/main/resources/public/business/eam/asset_attribute_item/asset_attribute_item_list.html
@@ -2,7 +2,7 @@
 /**
  * 资产字段配置项 列表页 JS 脚本
  * @author 金杰 , maillank@qq.com
- * @since 2021-09-09 12:26:02
+ * @since 2021-09-10 12:05:59
  */
  -->
  <!DOCTYPE html>
@@ -47,6 +47,7 @@
                     <!-- 必选 , required ,typeName=radio_box, isHideInSearch=true -->
                     <!-- 行布局位置 , layoutRow ,typeName=number_input, isHideInSearch=true -->
                     <!-- 列布局位置 , layoutColumn ,typeName=number_input, isHideInSearch=true -->
+                    <!-- 租户 , tenantId ,typeName=text_input, isHideInSearch=true -->
                     <!-- 属性备注 , resNotes ,typeName=text_input, isHideInSearch=true -->
                     <!-- 布局类型 , layoutType ,typeName=radio_box, isHideInSearch=false -->
                     <div class="search-unit">
